# JobHunter

./: .env.example  .gitignore  Dockerfile  JOBHUNTER_SKILL.md  MIGRATION_PLAN.md  README.md  career_summary.example.txt  entrypoint.sh  export_raw.py  pyproject.toml  railway.toml  requirements-bot.txt  requirements.txt  test_agent.py  test_embed.py  test_list_models.py  test_models.py  test_sdk_models.py
.agents/rules/: jobhunter-guardrails.md
.github/workflows/: pipeline.yml
api/: index.py
data/chroma_db/: chroma.sqlite3
scripts/: check_env.py  debug_pipeline.py  github_worker.py  migrate_embedding_cache.sql  migrate_sqlite_to_pg.py  schema.sql  set_webhook.py
src/: __init__.py  cli.py  demo_cv.py  pipeline.py
src/bot/: __init__.py  agent.py  cv_generator.py  handlers.py  key_router.py  keyboards.py  main.py  onboarding.py  tools.py  triggers.py
src/db/: __init__.py  client.py  connection.py  jobs.py  users.py
src/jobs/: __init__.py  classifier.py  config.py  database.py  matcher.py  models.py  sources.py
src/notify/: __init__.py  scheduler.py  telegram.py
src/rag/: __init__.py  ingest.py  retriever.py
