[project]
name = "jobhunter"
version = "0.1.0"
description = "Automated job application system with RAG-based career matching"
requires-python = ">=3.11"
dependencies = [
    # --- RAG (Module 1) ---
    "chromadb",                 # Vector database - stores your career docs as searchable vectors
    "sentence-transformers",    # Creates embeddings (number representations of text) locally
    "pypdf",                    # Reads PDF files (your resume, certificates)
    "python-docx",              # Reads Word (.docx) files

    # --- Job Search (Module 2) ---
    "httpx",                    # Makes HTTP requests to job APIs
    "pydantic",                 # Data validation - ensures job data has the right format
    "python-jobspy",            # library to scrape job boards
    "pandas",                   # data manipulation tool

    # --- CV Generator (Module 3) ---
    "ollama",                   # Talks to your local Ollama LLM
    "jinja2",                   # Template engine - fills in CV templates with your data
    "weasyprint",               # Converts HTML to PDF (for the final CV)

    # --- Apply Engine (Module 4) ---
    "playwright",               # Browser automation - can open pages and fill forms

    # --- CLI (Orchestrator) ---
    "typer",                    # Makes it easy to build command-line tools
    "rich",                     # Pretty terminal output (colors, tables, progress bars)

    # --- General ---
    "python-dotenv",            # Loads settings from .env file
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
jobhunter = "src.cli:app"
